--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/magicisfrond.magicisfrondGameMode"
+GlobalDefaultGameMode="/Script/Moon_Abyss.Moon_AbyssGameMode"
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -12,6 +12,10 @@ r.Shadow.Virtual.Enable=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
+
+r.SkinCache.CompileShaders=True
+
+r.RayTracing=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
@@ -49,15 +53,15 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/magicisfrond")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/magicisfrond")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="magicisfrondGameMode")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="magicisfrondCharacter")
++ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/Moon_Abyss")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/Moon_Abyss")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="Moon_AbyssGameMode")
++ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="Moon_AbyssCharacter")
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=BD08D9E546D246DCCF4C48A13D75398C
+SecurityToken=3CA177E442939659DCF70BA04557C81F
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
